Fix submit button text on iPhone bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,8 +251,9 @@ input[type=submit] {
     cursor: pointer;
     font-size: 1.2rem;
     margin-top: 1rem;
-    border: 1px solid #000;
     background-color: #FFF;
+    border: 1px solid #000;
+    color: #000; /* to fix bug where submit button text wasn;t showing on iPhone unrtiul hovered */
 }
 
 input[type=submit]:hover {
